tests/fixtures/invalid/bool_bitxor_list.py
# Cannot bitwise XOR Bool and List[int]
x: bool = True ^ [1, 2, 3]
